# boots

./: .cruft.json  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
boots/: __init__.py  boots.py
buti/: __init__.py  core.py
examples/example1/: main.py
examples/example1/components/: beanie.py  config.py  fastapi.py
examples/fastapi_beanie/: ids.py  main.py
examples/fastapi_beanie/components/: beanie.py  config.py  fastapi.py
examples/separate_com_options/: main.py
examples/separate_com_options/components/: beanie.py  fastapi.py
tests/: __init__.py  test_async_bootloader.py  test_bootloader.py  test_boots.py  test_buti.py  test_store.py
