[project]
name = "boots"
version = "0.1.0"
description = ""
authors = [
    {name = "Sunn", email = "sunn@atumm.io"},
]
dependencies = [
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/atumm-org/boots"

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pytest-cov==4.1.0",
    "pytest==7.3.1",
    "ssort>=0.11.6",
    "ruff==0.0.270",
    "pytest-anyio>=0.0.0",
]
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"


[tool.mypy]
files = "boots/**/*.py"
exclude = "__pypackages__/"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
data_file = "/tmp/.boots.coverage"
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 92
