[project]
name = "buti"
version = "1.0.0"
description = "A modular app bootloader"
authors = [
    {name = "Omar", email = "omar@atumm.org"},
]
dependencies = []
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/atumm-org/buti"

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pytest-cov==4.1.0",
    "pytest==7.3.1",
    "ssort>=0.11.6",
    "ruff==0.0.270",
    "pytest-anyio>=0.0.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.mypy]
files = "buti/**/*.py"
exclude = "__pypackages__/"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
data_file = "/tmp/.buti.coverage"
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 92
